--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,12 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      My college life
+      MyCollegeLife
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+ <button ion-button color="danger" (click)="navigateToTimetablePage()" round>Go to About page!</button>
+ <button ion-button color="dark" (click)="navigateToTimetablePageChange()" round>Pass data to the new page!</button>
 </ion-content>
