--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,4 +9,35 @@
 <ion-content padding>
  <button ion-button color="danger" (click)="navigateToTimetablePage()" round>Go to About page!</button>
  <button ion-button color="dark" (click)="navigateToTimetablePageChange()" round>Pass data to the new page!</button>
+ <ion-card>
+
+  <img src="img/advance-card-map-madison.png">
+  <ion-fab right top>
+    <button ion-fab>
+      <ion-icon name="pin"></ion-icon>
+    </button>
+  </ion-fab>
+
+  <ion-item>
+    <ion-icon name="football" item-left large></ion-icon>
+    <h2>Museum of Football</h2>
+    <p>11 N. Way St, Madison, WI 53703</p>
+  </ion-item>
+
+  <ion-item>
+    <ion-icon name="wine" item-left large ></ion-icon>
+    <h2>Institute of Fine Cocktails</h2>
+    <p>14 S. Hop Avenue, Madison, WI 53703</p>
+  </ion-item>
+
+  <ion-item>
+    <span item-left>18 min</span>
+    <span item-left>(2.6 mi)</span>
+    <button ion-button icon-left clear item-right>
+      <ion-icon name="navigate"></ion-icon>
+      Start
+    </button>
+  </ion-item>
+
+</ion-card>
 </ion-content>
